--- a/style.css
+++ b/style.css
@@ -19,7 +19,13 @@
 .custom-heading-2 {
     line-height: 1.2ch;
     font-family: "Zalando Sans Expanded", sans-serif;
-    font-size: 3.5rem;
+    font-size: 2.8rem;
+}
+
+.custom-heading-3 {
+    font-family: "Zalando Sans Expanded", sans-serif;
+    font-size: 2rem;
+    letter-spacing: -1px;
 }
 
 
@@ -163,7 +169,7 @@
 .founder-Section button {
     color: #fff;
     background-color: #2E3138;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     font-weight: 380;
     transition: all .4s ease;
 }
@@ -199,6 +205,91 @@
     width: 23%;
 }
 
+.custom-cards-grid {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 1rem;
+}
+
+.custom-cards-body {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    align-items: start;
+}
+
+.custom-Card h5 {
+    font-weight: normal;
+    letter-spacing: 1px;
+    min-height: 4em;
+}
+
+
+
+
+
+/* look Section */
+
+.look-Section {
+    min-height: 100vh;
+    min-height: 100dvh;
+    background-color: #D8E1E9;
+}
+
+.look-Section button {
+    font-size: 1.6rem;
+    font-weight: 380;
+}
+
+.look-Section h3 span {
+    color: #9B9BA4;
+}
+
+
+
+
+
+/* industries Section */
+
+.industries-Section button {
+    color: #fff;
+    background-color: #2E3138;
+    font-size: 1.4rem;
+    font-weight: 400;
+    letter-spacing: 1px;
+    transition: all .4s ease;
+}
+
+.industries-Section button:hover {
+    color: #fff;
+    background-color: #4fbf9c;
+}
+
+
+
+
+
+/* footer Section */
+
+footer {
+    display: flex;
+    background-color: #52555B;
+}
+
+footer>img {
+    width: 65px;
+    height: 65px;
+}
+
+footer input {
+    background-color: #52555B;
+}
+
+footer input::placeholder {
+    color: #9B9BA4;
+}
+
+
 
 
 
@@ -208,24 +299,26 @@
 @media (max-width: 1200px) {
     .custom-Card {
         width: 48%;
-        margin-bottom: 1.5rem;
+    }
+
+    footer {
+        display: block;
     }
 }
+
+
+
+
 
 @media (max-width: 786px) {
     .custom-Card {
         width: 100%;
     }
+    .spinning-Image {
+    width: 100%;
+    margin-left: 2rem;
 }
-
-
-
-
-
-
-
-
-
+}
 
 
 
